clarify pandoc reader format

--- a/append-qmd/_extensions/append-qmd/appendix_b.qmd
+++ b/append-qmd/_extensions/append-qmd/appendix_b.qmd
@@ -3,5 +3,5 @@
 
 <br>
 
-#### email: [coolguy@hotmail.com](https://youtu.be/dQw4w9WgXcQ?t=43)
+#### email: [coolguy@someserver.com](https://youtu.be/dQw4w9WgXcQ?t=43)
 #### phone: +1 800-867-5309
